[project]
authors = [
    {name = "Morten Lied Johansen", email = "mortenjo@ifi.uio.no"},
]
license = "MIT"
requires-python = "<4.0,>=3.11"
dependencies = [
    "pulsectl<25.0.0,>=24.0.0",
]
name = "audio-connected"
version = "0.2.0"
description = "Watches PulseAudio events for new sinks connected, and if the name matches the configured name, make that sink the default sink."
readme = "README.rst"

[project.urls]
Issues = "https://github.com/mortenlj/audio-connected/issues"
Repository = "https://github.com/mortenlj/audio-connected"

[project.scripts]
audio-connected = "audio_connected:main"

[dependency-groups]
dev = [
    "pytest==9.0.1",
]

[tool.ruff]
line-length = 120

[tool.uv]
package = true
